--- a/package.json
+++ b/package.json
@@ -9,11 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.6",
+    "@reduxjs/toolkit": "^1.8.2",
+    "apollo-link-context": "^1.0.20",
+    "clsx": "^1.1.1",
     "formik": "^2.2.9",
+    "graphql": "^16.5.0",
     "next": "12.1.6",
+    "node-fetch": "^2.6.0",
     "ramda": "^0.28.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
+    "react-spinners": "^0.12.0",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
