--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-spinners": "^0.12.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "sweetalert2": "^11.4.17",
     "yup": "^0.32.11"
   },
   "devDependencies": {
