--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
+    "react-select": "^5.3.2",
     "react-spinners": "^0.12.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
